feat: [김정민] 용어의 시작 글자(초성/알파벳/기호)로 용어를 찾을 수 있습니다. [JSAB-54]